fixup something